# freelude-presentation

./: README.md  freelude-presentation.cabal  freelude_slideshow.odg  stack.yaml
src/: P01_Category_Definition.hs  P02_CategoryPairFunctions.hs  P03_CategoryPairAttempt.hs  P04_CategoryPairAttempt2.hs  P05_LetsWriteOurOwnCategory.hs  P06_NormalFunctionsAsNewCategory.hs  P07_CanWeDefineOurTupleCategory.hs  P08_CategoryAttempt2.hs  P09_NewCategoryInstance.hs  P10_FurtherNotes.txt
